# PySallad

./: LICENSE  README.md  encryptor.py  pyproject.toml
src/Sallad_Encryption_MonkeyBoi/: sallad_core.py
