[build-system]
requires = ["setuptools>=61.0", "random"]
build-backend = "setuptools.build_meta"0
[project]
name = "Sallad"
version = "1.0.0"
authors = [
  { name="Dallas Baker", email="lildallas463@gmai.com" },
]
description = "A Package that can Encrypt and Generate IDs and Seeds"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/MonkeyRetard/Sallad"
"Bug Tracker" = "https://github.com/MonkeyRetard/Sallad/issues"